# ressetter

./: .gitignore  4k120.code-workspace  4k120.py  4k120.spec  4k120_background.bat  README.md  Set-RefreshRate.ps1  display.py  display_settings.py  input_monitor.py  main.py  pycompiler.bat  pyproject.toml  ressetter.code-workspace  ressetter.spec  ruff.toml
.github/workflows/: python-publish.yml
PowerShell/: 4K120.ps1
src/4k120/: display_settings.py  input_monitor.py  main.py
src/py4k120/: __init__.py  display_settings.py  input_monitor.py  main.py  py_4k120.py
src/ressetter/: config.py  display_settings.py  input_monitor.py  main.py  ressetter.py
