[project]
name = "py4k120"
version = "0.4.0"
description = "Set resolution and refresh rate to 4K @ 120Hz"
authors = [{ name = "Danny Stewart", email = "danny@stewart.cc" }]
readme = "README.md"
requires-python = ">=3.12,<3.14"
packages = [{ include = "py4k120", from = "src" }]
dependencies = [
    "dsutil @ git+https://gitlab.dannystewart.com/danny/dsutil.git",
    "psutil (>=7.0.0)",
    "pynput (>=1.8.0)",
    "pywin32 (>=309); platform_system == 'Windows'",
    "toml (>=0.10.2)",
]

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.12.0"
mypy = "^1.15.0"
ruff = "^0.9.10"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
4k120 = "py4k120.main:main"
