[project]
name = "ressetter"
version = "0.2.1.dev"
description = "Auto-set resolution and refresh rate on Windows"
authors = [{ name = "Danny Stewart", email = "danny@stewart.cc" }]
urls = { repository = "https://github.com/dannystewart/ressetter" }
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12,<3.14"
dependencies = [
    "polykit (>=0.11.4,<0.12.0)",
    "psutil (>=7.0.0)",
    "pynput (>=1.8.1)",
    "pywin32 (>=310) ; platform_system == \"Windows\"",
    "toml (>=0.10.2)",
]

[tool.poetry.group.dev.dependencies]
pyinstaller = ">=6.14.1"
mypy = ">=1.16.1"
ruff = ">=0.12.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ressetter = "ressetter.main:main"
