[project]
name = "ressetter"
version = "0.2.1.dev"
description = "Auto-set resolution and refresh rate on Windows"
authors = [{ name = "Danny Stewart", email = "danny@stewart.cc" }]
urls = { repository = "https://github.com/dannystewart/ressetter" }
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12,<3.14"
dependencies = [
    "polykit (>=0.14.6,<0.15.0)",
    "psutil (>=7.1.3)",
    "pynput (>=1.8.1)",
    "pywin32 (>=311) ; platform_system == \"Windows\"",
    "toml (>=0.10.2)",
]

[tool.poetry.group.dev.dependencies]
pyinstaller = ">=6.17.0"
mypy = ">=1.19.0"
ruff = ">=0.14.8"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ressetter = "ressetter.main:main"
